trouble-istio-mongodb/k8s/01-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: troubleshooting
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: troubleshooting
spec:
  selector:
    "service.istio.io/canonical-name": istio-ingress-gateway
  servers:
  - hosts:
    - "*"
    port:
      number: 80
      name: http
      protocol: TCP
